--- a/themes/src/layouts/_default/taxonomy.html
+++ b/themes/src/layouts/_default/taxonomy.html
@@ -38,6 +38,20 @@
     {{end}}
     </ul>
 
+  <h1>Projects</h1>
+
+  <div class="gallery">
+    {{ range $.Site.Data.projects }}
+      <div class="gallery-item">
+        <a href="{{ .url }}">
+          <img src="{{ .img }}"/>
+          {{ .name }}
+        </a>
+        <p>by: {{ .nick }}</p>
+      </div>
+    {{ end }}
+  </div>
+
 </div>
 {{ partial "footer.html" . }}
 {{ partial "foot.html" . }}
