--- a/themes/src/styles/main.styl
+++ b/themes/src/styles/main.styl
@@ -10,6 +10,7 @@
 @import "mixins/material"
 @import "templates/base"
 @import "templates/button"
+@import "templates/gallery"
 
 @import "templates/front"
 @import "templates/resources"
