Add mentorship track

--- a/themes/src/layouts/index.html
+++ b/themes/src/layouts/index.html
@@ -7,7 +7,7 @@
       <!--<a class="cta-button" href="http://bit.ly/DevCampReg">
         APPLY
       </a>-->
-      <h1><a class="cta-button" href="/tracks/web/">Navigate to Current Track</a></h1>
+      <h1><a class="cta-button" href="/mentorship/fifteen-b">Navigate to Current Track</a></h1>
     </div>
   </section>
   {{ range where .Data.Pages.ByDate "Section" "front"}}
