--- a/themes/src/styles/templates/gallery.styl
+++ b/themes/src/styles/templates/gallery.styl
@@ -7,3 +7,19 @@
     column(1/3, cycle: 3, uncycle:2, gutter: 1)
     img
       width 100%
+
+.mentors-gallery
+  cf()
+  .gallery-item
+  &>div
+    @media (min-width sm_size)
+      column(1/2, cycle: 2, uncycle:2, gutter: 5)
+    @media (min-width md_size)
+      column(1/4, cycle: 4, uncycle:2, gutter: 5)
+    img
+      width 100%
+    box-sizing border-box
+    overflow hidden
+    margin-bottom 1em
+    .details
+      padding 0.5em
